--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-slick": "^0.27.13",
+    "react-ssg-netlify-forms": "^1.0.2",
     "react-sticky": "^6.0.3",
     "react-visibility-sensor": "^5.1.1",
     "typed.js": "^2.0.11"
