--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "setup": "node ./bin/setup.js"
   },
   "dependencies": {
+    "body-scroll-lock": "^3.1.5",
     "gatsby": "^2.27.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-analytics": "^2.6.0",
