--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.14.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
+    "react-dvd-screensaver": "^0.0.4",
     "react-helmet": "^6.1.0",
     "react-slick": "^0.27.13",
     "react-ssg-netlify-forms": "^1.0.2",
