--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
+    "formik": "^2.2.6",
     "gatsby": "^2.27.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-analytics": "^2.6.0",
@@ -34,12 +35,14 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
     "react-dvd-screensaver": "^0.0.4",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-select": "^4.2.1",
     "react-slick": "^0.27.13",
-    "react-ssg-netlify-forms": "^1.0.2",
     "react-sticky": "^6.0.3",
     "react-visibility-sensor": "^5.1.1",
-    "typed.js": "^2.0.11"
+    "typed.js": "^2.0.11",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "contentful-import": "^7.9.22",
